# strawboat

./: .gitignore  Cargo.toml  README.md  REAMD.md
.github/workflows/: rust.yml
benches/: write_parquet.rs  write_strawboat.rs
examples/: pa_file_read.rs  pa_file_write.rs  parquet_read.rs  parquet_write.rs  quiver_file_read.rs  quiver_file_write.rs  starwboat_file_write.rs  strawboat_batch_read.rs  strawboat_file_read.rs  strawboat_read.rs  strawboat_write.rs
src/: compression.rs  data_type.rs  errors.rs  lib.rs  stat.rs  util.rs
src/compression/: basic.rs  bitpack.rs  dict.rs  mod.rs  rle.rs  rle_0.rs
src/compression/binary/: dict.rs  freq.rs  mod.rs  one_value.rs
src/compression/boolean/: mod.rs  one_value.rs  rle.rs
src/compression/double/: dict.rs  freq.rs  mod.rs  one_value.rs  patas.rs  rle.rs  traits.rs
src/compression/integer/: bp.rs  delta.rs  delta_bp.rs  dict.rs  freq.rs  mod.rs  one_value.rs  primitive.rs  rle.rs  traits.rs
src/compression/string/: mod.rs
src/encodings/: decoding.rs  mod.rs  rle.rs
src/encodings/encoding/: mod.rs
src/read/: batch_read.rs  deserialize.rs  mod.rs  read_basic.rs  reader.rs
src/read/array/: binary.rs  boolean.rs  double.rs  integer.rs  list.rs  map.rs  mod.rs  null.rs  primitive.rs  struct_.rs  utf8.rs
src/util/: bit_pack.rs  bit_util.rs  byte_writer.rs  env.rs  memory.rs  mod.rs
src/util/test_common/: file_util.rs  mod.rs  rand_gen.rs
src/write/: binary.rs  boolean.rs  common.rs  common_sync.rs  mod.rs  primitive.rs  serialize.rs  writer.rs
tests/it/: io.rs  main.rs  read_meta.rs
