[package]
name = "quiver"
version = "0.1.0"
license = "Apache-2.0"
description = "A native storage format based on Apache Arrow."
homepage = "https://github.com/sundy-li/Quiver"
repository = "https://github.com/sundy-li/Quiver"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
serde = "1.0.151"
serde_json = "1.0.89"
lz4 = { version = "1.23.1" }
zstd = { version = "0.11" }
snap = { version = "1.1.0" }
arrow = { package = "arrow2", version = "0.15.0", default-features = false, features = [
	"io_parquet",
	"compute",
	"io_parquet_compression",
	"io_ipc",
] }

[dev-dependencies]
tempfile = "3.3.0"
rand = "0.8.5"
