[package]
name = "strawboat"
version = "0.2.1"
license = "Apache-2.0"
description = "A native storage format based on Apache Arrow."
homepage = "https://github.com/sundy-li/strawboat"
repository = "https://github.com/sundy-li/strawboat"
authors = ["Sundy-li <543950155@qq.com>"]
keywords = ["arrow", "storage", "analytics"]
edition = "2021"
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
serde = "1.0.151"
log = "0.4.16"
serde_json = "1.0.89"
lz4 = { version = "1.23.1" }
zstd = { version = "0.11" }
snap = { version = "1.1.0" }
roaring = "0.10.1"
bytes = "^1"
num = { version = "0.4", default-features = false, features = ["std"] }
seq-macro = { version = "0.3", default-features = false }
hashbrown = { version = "0.13", default-features = false }
ahash = { version = "0.8", default-features = false, features = [
	"runtime-rng",
] }
parquet2 = { version = "0.17" }
byteorder = "^1.4"
futures = "0.3"

arrow = { package = "arrow2", version = "^0.17", default-features = false, features = [
	"benchmarks",
	"io_parquet",
	"compute",
	"io_parquet_compression",
	"io_ipc",
	"lz4",
] }
rand = "0.8.5"


[dev-dependencies]
criterion = "0.3"
tempfile = "3.3.0"
env_logger = "0.9.0"
async-std = "1.12"

[[bench]]
name = "write_parquet"
harness = false

[[bench]]
name = "write_strawboat"
harness = false
